--- a/templates/base.html
+++ b/templates/base.html
@@ -288,6 +288,7 @@
         
         <!-- Content wrapper -->
         <div class="content-wrapper">
+            <!--
             {% if messages %}
                 <div class="mb-4">
                     {% for message in messages %}
@@ -297,7 +298,7 @@
                         </div>
                     {% endfor %}
                 </div>
-            {% endif %}
+            {% endif %}-->
             
             {% block content %}
             <!-- Main content will be inserted here -->
